# quark

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: blank.md  bug_report.md  verbesserung.md  wunsch.md
.github/workflows/: build.yml
scripts/: install-linux.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/frontend/: package-lock.json  package.json  vite.config.ts
src/frontend/src/: App.tsx  index.css  main.tsx  types.ts
src/frontend/src/components/: AboutDialog.tsx  CollapsibleCard.tsx  ColorPanel.tsx  ColorPicker.tsx  ExportPanel.tsx  FramePanel.tsx  LabelPanel.tsx  QrPreview.tsx  UpdateBanner.tsx  UrlInput.tsx
src/frontend/src/hooks/: useAppVersion.ts  useUpdater.ts
