[package]
name = "quark"
version = "0.1.5"
description = "Quark – QR-Code-Generator"
authors = []
license = "AGPL-3.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "quark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "2", features = ["v2_40"] }
